--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html {
+  background-color: #282c34;
+  position: relative;
+  color:aliceblue
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
