--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,10 +1,9 @@
 .popup {
     position: fixed;
     background: #282c34c0;
-
     width: 100%;
     left: 0;
-    height: 100vh;
+    /* min-height: 100vh; */
     top: 0;
     display: flex;
     justify-content: center;
@@ -18,7 +17,7 @@
     align-content: center;
     align-items: center;
     background: #282c34;
-    ;
+    overflow-y: auto;
     padding: 30px 10px;
     border-radius: 5px;
     border: 1px solid #3a7bd5;
@@ -35,11 +34,12 @@
     width: fit-content;
     display: flex;
     padding: 5px;
+    align-items: center;
 }
 
 .rule-name .etat,
 .rule-name .phase {
-    margin-left: 20px;
+    margin-left: 10px;
     color: white;
     padding: 2px 5px;
     text-transform: uppercase;
