--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -2,32 +2,38 @@
     position: fixed;
     background: #282c34c0;
     width: 100%;
+    height: 100%;
     left: 0;
-    /* min-height: 100vh; */
     top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: auto;
 }
 
-.popup-content {
+.popup-container {
     max-width: 650px;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    background: #282c34;
+    max-height: 90%;
     overflow-y: auto;
+    background: #282c34;
     padding: 30px 10px;
     border-radius: 5px;
     border: 1px solid #3a7bd5;
 }
-
+.popup-content{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .popup-content .rule-title {
     margin: 5px 0;
     color: #5589d2;
 }
-
+.no-scroll {
+    overflow: hidden;
+}
 .rule-name {
     cursor: pointer;
     color: #3a7bd5;
@@ -62,7 +68,9 @@
 .etat.amélioration {
     background: #34773d;
 }
-
+.etat.règle{
+    background: #3a7bd5;
+}
 .etat.equipement {
     background: #808834;
 }
