--- a/src/components/jeucard/jeucard.css
+++ b/src/components/jeucard/jeucard.css
@@ -1,3 +1,10 @@
+.container-card{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+}
 .card {
     width: 100%;
     display: flex;
@@ -114,5 +121,12 @@ button {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         justify-items: center;
+    }
+    .container-card{
+        flex-wrap: nowrap;
+    }
+    .card{
+        width: 50%;
+        
     }
 }
