--- a/src/components/jeucard/jeucard.css
+++ b/src/components/jeucard/jeucard.css
@@ -11,7 +11,9 @@
     flex-direction: column;
     align-items: center;
 }
-
+.icon{
+    color: #eb1001;
+}
 .card-content {
     border: 2px solid #3a7bd5;
     padding: 5px 10px;
@@ -108,7 +110,11 @@ button {
     color: white;
     font-size: 26px;
 }
-
+.right{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
 @media screen and (min-width: 768px) {
     .grid2 {
         display: grid;
